# ChangeLog for dev-perl/Class-Std
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Std/ChangeLog,v 1.2 2012/04/22 10:34:20 tove Exp $

*Class-Std-0.11.0 (22 Apr 2012)

  22 Apr 2012; Torsten Veller <tove@gentoo.org> -Class-Std-0.011.ebuild,
  +Class-Std-0.11.0.ebuild:
  Change version scheme. Add ~x86. Fix Header

*Class-Std-0.011 (11 Apr 2012)

  11 Apr 2012; Diego E. Pettenò <flameeyes@gentoo.org> +Class-Std-0.011.ebuild,
  +metadata.xml:
  Initial import of dependencies of google-api-adwords-perl.
