@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Std/Class-Std-0.11.0.ebuild,v 1.1 2012/04/22 10:34:20 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Std/Class-Std-0.11.0.ebuild,v 1.2 2012/06/18 11:50:40 tove Exp $
 
 EAPI="4"
 
@@ -9,6 +9,7 @@ MODULE_VERSION=0.011
 inherit perl-module
 
 DESCRIPTION='Support for creating standard "inside-out" classes'
+SRC_URI+=" http://dev.gentoo.org/~tove/distfiles/${CATEGORY}/${PN}/${P}-patch.tar.bz2"
 
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
@@ -28,3 +29,8 @@ DEPEND="${RDEPEND}
 "
 
 SRC_TEST="do"
+
+EPATCH_SUFFIX=patch
+PATCHES=(
+	"${WORKDIR}"/${MY_PN:-${PN}}-patch
+)
