@@ -2,13 +2,14 @@
 Hash: SHA256
 
 DIST Class-Std-0.011.tar.gz 31080 RMD160 3a0717320fb8e4be211c858c1f69260ee4d465ad SHA1 a6f373bb89f0878047b4d214ec52e86fe36ae3dd SHA256 454ac2f99fb45735709c0bf1d04f8e0c162abd26026fbc1895cb71de191ecfa2
-EBUILD Class-Std-0.11.0.ebuild 631 RMD160 08d85efac21b1f738d9cf5c3d0ac2cff8b904665 SHA1 16dcedb5985c574552f69407cc799e13ef3f8eda SHA256 593ab7afe856527aea7d105bd45fa4923a9dcb5dd69cd985ba746c2c08aa40fb
-MISC ChangeLog 580 RMD160 c7b797237622a4afb70b8e021980334c52090340 SHA1 dfab88dc52a705f29073ef031830a1d66b14570e SHA256 77e7addb04c80154bc76e41e083a84ec75d88b1643aa038c6d3d50baf23042e2
+DIST Class-Std-0.11.0-patch.tar.bz2 379 RMD160 7dcbba130145d996ffff6c17984cad7d44b8fa60 SHA1 ff03a40825284f0b0e50cb3e65096b50b298b831 SHA256 54f42413f0204b6e262d31caa5ca2384842cf9e86221e2cb1beaea9f88f65251
+EBUILD Class-Std-0.11.0.ebuild 787 RMD160 3c8aa30c9435dfc465efabe1077d40632abd8433 SHA1 35bf5c595a6a0351397ca7e4b163fb32431542b9 SHA256 a6915f5f178f9810b8e33853399efc2098d06da897ed8e9e2ac4b51d2918e5c5
+MISC ChangeLog 696 RMD160 dc8bfba2355cc649e2ef7d8377f07f9716ae2f9c SHA1 58dfa278e9847a8ab336bffe7c7044a2603fc89e SHA256 dbe23a0f6e485aa677bf02dbfa5f7aedf866c6e800c318272dd5735ff00f3119
 MISC metadata.xml 235 RMD160 817ebc1aaf05894dc9017d8a518586e6bb9442f6 SHA1 3ccece70106d45d8eb299b427b912c20ffd23ff6 SHA256 4f0fc28d393322cf346243873730c9a8fe2c76f95ab324ff2c8e0b54f674e303
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk+T3rEACgkQV3J2n04EauyrngCgtpfuDfNNLrBaeeJ+DiYXKYHM
-R6AAnR5oag/CIfK+R2MJYiokfRc0mWvE
-=PeXR
+iEYEAREIAAYFAk/fFhYACgkQV3J2n04EauwP2ACgqctK1bVqTJcSV7UbWtzpTLDp
+DL8AoM/exqaNvroaKhSf5WG854JlOM84
+=DZif
 -----END PGP SIGNATURE-----
