@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Class-Std
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Std/ChangeLog,v 1.2 2012/04/22 10:34:20 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-Std/ChangeLog,v 1.3 2012/06/18 11:50:40 tove Exp $
+
+  18 Jun 2012; Torsten Veller <tove@gentoo.org> Class-Std-0.11.0.ebuild:
+  Fix pod encoding test failure (#421705)
 
 *Class-Std-0.11.0 (22 Apr 2012)
 
